# cefr-highlight

./: .gitignore  README.md  language-configuration.json  package.json  test-sample.cefr
client/: package-lock.json  package.json  tsconfig.json
client/src/: extension.ts
server/: Cargo.toml
server/data/: cefr_index.json
server/src/: cefr.rs  main.rs  tokenizer.rs  translate.rs
