[package]
name = "cefr-lsp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cefr-lsp-server"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
log = "0.4"
env_logger = "0.11"
